# template-lib-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
include/templatelib/: fortytwo.h
src/: CMakeLists.txt  fortytwo.cpp  templatelib_42.cpp  templatelib_42.h
tests/: CMakeLists.txt
tests/catch/: CMakeLists.txt
tests/integration/: CMakeLists.txt  templatelib_42.t.cpp
tests/unit/: CMakeLists.txt  fortytwo.t.cpp
